--- a/index.css
+++ b/index.css
@@ -15,3 +15,11 @@ body {
     font-size: 30px;
     color: brown;
 }
+.form {
+    border: solid brown;
+    width: 300px;
+    height: 400px;
+    margin-left: 0px;
+    margin-top: 100px;
+    padding-top: 50px;
+}
